--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+<script src="file_helper.js"></script>
 <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
